# ai-saga-book

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  QUICK_REFERENCE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml
book/: book.toml
book/src/: SUMMARY.md  ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  ch11.md  ch12.md  ch13.md  ch14.md  ch15.md  ch16.md  ch17.md  ch18.md  ch19.md  ch20.md  ch21.md  ch22.md  ch23.md  ch24.md  ch25.md  ch26.md  ch27.md  ch28.md  ch29.md  ch30.md  ch31.md  ch32.md  ch33.md  ch34.md  introduction.md
book/theme/: custom.css
scripts/: build_pdf_typst.py  merge_chapters.py  utils.py
tests/: test_utils.py
